package com.diguage.didp.state;

/**
 * State 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-19 17:53:36
 */
public abstract class State {
  public abstract void handle(Context context);
}
